05_ingress/service-multitool.yaml
apiVersion: v1
kind: Service
metadata:
  name: multitool
spec:
  selector:
    app: multitool
  ports:
    - name: multitool
      protocol: TCP
      port: 80
